agoraCooperative/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agora-cooperative
  labels:
    name: agora-cooperative
    environment: production
